Use gem "hiredis"

--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -4,6 +4,7 @@ gem 'sinatra'
 gem 'unicorn'
 gem 'foreman'
 gem 'redis'
+gem 'hiredis'
 gem 'mysql2'
 gem 'net-sftp'
 gem 'rack-lineprof', group: :development
